--- a/style/style.css
+++ b/style/style.css
@@ -118,6 +118,9 @@ li {
   align-items: center;
   margin-bottom: 2rem;
 }
+.header__toggle {
+  display: none;
+}
 .header__logo {
   display: flex;
   align-items: center;
@@ -126,9 +129,18 @@ li {
   margin-left: 2rem;
   display: flex;
 }
+.header .nav__container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  flex-grow: 2;
+}
 .header .nav__item {
   padding: 1rem;
   position: relative;
+}
+.header .nav__close {
+  display: none;
 }
 .header .nav__list {
   display: flex;
@@ -223,17 +235,23 @@ li {
 }
 .main__content {
   flex: 0 1 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
   padding-inline: 5rem;
   gap: 4rem;
+}
+.main__text {
+  display: grid;
+  align-self: center;
+  align-content: end;
+  min-height: 100%;
+  gap: 2rem;
 }
 .main__header {
   font-weight: var(--fw-7);
   font-size: 8rem;
   color: var(--c-mid-black);
-  justify-self: flex-start;
+  align-self: end;
 }
 .main__p {
   font-size: var(--f-18);
@@ -244,8 +262,103 @@ li {
   display: flex;
   gap: 3rem;
   margin-top: 2rem;
-  height: 10%;
   align-items: flex-end;
+  align-self: end;
+}
+
+/*
+---------------------------
+-------Mobile View----------
+----------------------------
+*/
+@media screen and (max-width: 900px) {
+  .header .nav {
+    flex-direction: column;
+    margin-left: 0;
+    align-self: flex-start;
+  }
+  .header .nav__container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--c-mid-white);
+    height: 110vh;
+    justify-content: flex-start;
+    padding-top: 2rem;
+    min-width: 22vw;
+    transform: translateX(100%);
+    z-index: 2000;
+    transition: all 0.2s ease-in-out;
+  }
+  .header .nav__container.menu {
+    transform: translateX(0);
+  }
+  .header .nav__list {
+    margin-left: 0;
+  }
+  .header .nav__dropdown {
+    position: static;
+    top: 0;
+    box-shadow: none;
+    transform: translateY(0);
+    opacity: 0;
+    height: 0;
+    transition: all 0.2s ease-in-out;
+  }
+  .header .nav__dropdown.show {
+    height: auto;
+    opacity: 1;
+  }
+  .header .nav__close {
+    display: inline-block;
+    width: 3rem;
+    align-self: end;
+    padding: 1rem;
+  }
+  .header .nav__close img {
+    display: inline-block;
+  }
+  .header__login {
+    flex-direction: column;
+  }
+  .header__login .register {
+    width: 60%;
+  }
+  .header__toggle {
+    display: inline-block;
+    flex-grow: 2;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .header__toggle img {
+    max-width: 4rem;
+  }
+  .overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+  }
+  .overlay.display {
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header {
+    margin: 0 auto;
+  }
+  .main {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .main__img {
+    grid-row: 1/2;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
