--- a/style/style.css
+++ b/style/style.css
@@ -355,6 +355,7 @@ li {
   .main {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 100%;
   }
   .main__img {
     grid-row: 1/2;
